--- a/Sat.Recruitment.Infrastructure/Sat.Recruitment.Infrastructure.csproj
+++ b/Sat.Recruitment.Infrastructure/Sat.Recruitment.Infrastructure.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
