--- a/Sat.Recruitment.Api/appsettings.json
+++ b/Sat.Recruitment.Api/appsettings.json
@@ -1,10 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "FileSystemDataLoaderSettings": {
+        "Root": "",
+        "FileName": "Users.txt",
+        "Directory": "Files",
+        "CreateIfNotExist" :  true
+    },
+    "AllowedHosts": "*"
 }
