--- a/Sat.Recruitment.DataAccess/Sat.Recruitment.DataAccess.csproj
+++ b/Sat.Recruitment.DataAccess/Sat.Recruitment.DataAccess.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Sat.Recruitment.Domain\Sat.Recruitment.Domain.csproj" />
+    <ProjectReference Include="..\Sat.Recruitment.Infrastructure\Sat.Recruitment.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
