-  Refactor endpoint response. - Adds new Error supor - Adds new Result suppor

--- a/Sat.Recruitment.Api/Sat.Recruitment.Api.csproj
+++ b/Sat.Recruitment.Api/Sat.Recruitment.Api.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>10.0</LangVersion>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="Files\" />
+    <Folder Include="Filters\" />
   </ItemGroup>
 
   <ItemGroup>
